--- a/chicagoland.pandemicresponsecommons.org/dashboard/Public/notebooks/kaggle_data_analysis_04072020.html
+++ b/chicagoland.pandemicresponsecommons.org/dashboard/Public/notebooks/kaggle_data_analysis_04072020.html
@@ -4,8 +4,8 @@
 
 <title>kaggle_data_analysis_04072020</title>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
 
 
 
