--- a/chicagoland.pandemicresponsecommons.org/dashboard/Public/index.html
+++ b/chicagoland.pandemicresponsecommons.org/dashboard/Public/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <link href='./main.css' rel='stylesheet' type='text/css'>
 
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
 </head>
 
 <body>
