--- a/chicagoland.pandemicresponsecommons.org/dashboard/Public/notebooks/nCoV-2019_data_analysis.html
+++ b/chicagoland.pandemicresponsecommons.org/dashboard/Public/notebooks/nCoV-2019_data_analysis.html
@@ -4,8 +4,8 @@
 
 <title>nCoV-2019_data_analysis</title>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
 
 
 
@@ -13051,7 +13051,7 @@ div#notebook {
 </style>
 
 <!-- Custom stylesheet, it must be in the same directory as the html file -->
-<link rel="stylesheet" href="custom.css">
+<link rel="stylesheet" href="./custom.css">
 
 <!-- Loading mathjax macro -->
 <!-- Load mathjax -->
