--- a/chicagoland.pandemicresponsecommons.org/dashboard/Public/index.html
+++ b/chicagoland.pandemicresponsecommons.org/dashboard/Public/index.html
@@ -44,7 +44,7 @@
       <div class='partner'>
         <div class="partner-content">
 
-          <a href="https://ctds.uchicago.edu/"><img src="./sponsors-logo/ctds.jpg" class="image-wrapper" /></a>
+          <a href="https://ctds.uchicago.edu/"><img src="./sponsors-logo/ctds.png" class="image-wrapper" /></a>
         </div>
         <div class="partner-content">
 
